@@ -1,3 +1,14 @@
+2012-05-09  Ojan Vafai  <ojan@chromium.org>
+
+        Don't show partytime if there are non-layout test failures.
+        https://bugs.webkit.org/show_bug.cgi?id=86056
+
+        Reviewed by Dimitri Glazkov.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/controllers.js:
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/controllers_unittests.js:
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/garden-o-matic.js:
+
 2012-05-09  Hayato Ito  <hayato@chromium.org>
 
         Improve a warning message for a reftest having an unused expectation file.
